--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -4,11 +4,21 @@ body, p, ol, ul, td {
     line-height: 18px;
 }
 
+a {
+  color: #000;
+}
+
 .header {
     width: 100%;
     height: 70px;
     padding: 4px 30px;
     background-color: #000000;
+    
+    .nav-item {
+      display: inline-block;
+      color: #fff;
+      font-size: 14px;
+    }
     
     &-left-nav {
       float: left;
@@ -18,12 +28,31 @@ body, p, ol, ul, td {
       float: right;
     }
     
-    .nav-item {
-      display: inline-block;
-      color: #fff;
-      font-size: 14px;
+    &-nav-menu {
+      background-color: #fff;
+      border: 3px solid #F6F8F9;
+      // display: none;
+      position: absolute;
+      top: 70px;
+      right: 10px;
+      padding: 15px;
+      z-index: 1000;
+      
+      li {
+        line-height: 30px;
+        font-size: 16px;
+        padding: 3px 5px;
+      }
     }
 }
+.host-icon {
+  width: 65px;
+  height: 65px;
+  object-fit: cover;
+  border-radius: 50px;
+}
+
+
 
 .btn {
     display: inline-block;
