--- a/app/assets/stylesheets/reboot.css
+++ b/app/assets/stylesheets/reboot.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap Reboot v4.6.0 (https://getbootstrap.com/)
+ * Bootstr p Reboot v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -123,7 +123,7 @@ sup {
 }
 
 a {
-  color: #007bff;
+  /* color: #007bff; */
   text-decoration: none;
   background-color: transparent;
 }
