--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,9 +3,23 @@
     <%= link_to image_tag("logo.png"), '/'%>
   </div>
   <div class="header-right-nav">
-    <div class="nav-item">
-      <%= link_to "ログイン", '/users/sign_in', class: 'btn btn-primary my-2 mx-3'%>
-      <%= link_to "登録する", '/users/sign_up', class: 'btn btn-secondary'%>
-    </div>
+    <% if user_signed_in? %>
+      <div class="nav-item d-sm-inline-block d-none">username</div>
+      <div class="nav-item">
+        <img class="mx-3 p-1 host-icon nav-trigger" alt="メニュー" src="#">                       <!--後でsrcを追加する-->
+        <ul class="header-nav-menu">
+          <li><a href="/rooms/new">ルーム登録</a></li>
+          <li><a href="/reservations">予約済みルーム一覧</a></li>
+          <li><a href="/rooms/posts">登録済みルーム一覧</a></li>
+          <li><a href="/users/account">設定</a></li>
+          <li><a rel="nofollow" data-method="delete" href="/users/sign_out">ログアウト</a></li>
+        </ul>
+      </div>
+    <% else %>
+      <div class="nav-item">
+        <%= link_to "ログイン", '/users/sign_in', class: 'btn btn-primary my-2 mx-3'%>
+        <%= link_to "登録する", '/users/sign_up', class: 'btn btn-secondary'%>
+      </div>
+    <% end %>
   </div>
 </header>
