--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -4,8 +4,43 @@ body, p, ol, ul, td {
     line-height: 18px;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   color: #000;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    
+    &-primary {
+      color: #fff;
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+    
+    &-secondary {
+      color: #fff;
+      background-color: #6c757d;
+      border-color: #6c757d;
+    }
 }
 
 .header {
@@ -45,6 +80,7 @@ a {
       }
     }
 }
+
 .host-icon {
   width: 65px;
   height: 65px;
@@ -52,37 +88,29 @@ a {
   border-radius: 50px;
 }
 
-
-
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+.user {
+  .user-nav {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 30px 15px;
     
-    &-primary {
-      color: #fff;
-      background-color: #007bff;
-      border-color: #007bff;
+    li {
+      font-size: 18px;
+      padding: 10px;
     }
     
-    &-secondary {
-      color: #fff;
-      background-color: #6c757d;
-      border-color: #6c757d;
+    &-pc {
+      height: 100vh;
+      
+      .active {
+        border-right: 3px solid #4a90e2;
+        
+        a {
+          color: #4a90e2;
+        }
+      }
     }
+  }
 }
 
 .footer {
