--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,8 @@
     <% if user_signed_in? %>
       <div class="nav-item d-sm-inline-block d-none"><%= current_user.name%></div>
       <div class="nav-item">
-        <img class="mx-3 p-1 host-icon nav-trigger" alt="メニュー" src="#">                       <!--後でsrcを追加する-->
+        <!--後でsrcを追加する-->
+        <img class="mx-3 p-1 host-icon nav-trigger" alt="メニュー" src=<%= current_user.icon %>>                       
         <ul class="header-nav-menu">
           <li><a href="/rooms/new">ルーム登録</a></li>
           <li><a href="/reservations">予約済みルーム一覧</a></li>
