--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -12,7 +12,7 @@
      </tr>
      <tr>
        <th><%= f.label :icon ,"アイコン" %></th>
-       <td><%= f.text_field :icon %></td>
+       <td><%= f.file_field :icon %></td>
      </tr>
      <tr>
        <th><%= f.label :profile ,"プロフィール" %></th>
