--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,9 @@
 <header class="header">
   <div class="header-left-nav">
     <%= link_to image_tag("logo.png"), '/'%>
+    
+    <%= render "shared/search-form"%>
+    
   </div>
   <div class="header-right-nav">
     <% if user_signed_in? %>
