--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,3 +1,9 @@
+<div>
+  <%= @area %>
+  <%= @keyword %>
+</div>
+
+
 <% @rooms.each do |room| %>
   <%= room.id %>
   <%= room.name %>
@@ -7,3 +13,4 @@
   <img src=  <%= room.room_image %> alt="">
   <br>
 <% end %>
+
