--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,1 +1,10 @@
 <%= @room.id %>
+
+
+<div>
+  <%= form_with model: @reserve, method: :post, url: reservations_new_path, local: true do |f|%>
+    <%= f.label :start_date, "開始日"%>
+    <%= f.date_field :start_date%>
+    <%= f.submit "aaa"%>
+  <% end %>
+</div>
