--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -6,7 +6,7 @@
 
 <% @rooms.each do |room| %>
   <%= room.id %>
-  <%= room.name %>
+  <%= link_to room.name, room %>
   <%= room.explanation %>
   <%= room.fee %>
   <%= room.address %>
