--- a/app/views/rooms/posts.html.erb
+++ b/app/views/rooms/posts.html.erb
@@ -7,4 +7,5 @@
   <%= room.address %>
   <img src=  <%= room.room_image %> alt="aaaa">
   <%= room.user_id %>
+  <%= link_to "編集", [:edit, room]%>
 <% end %>
