--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Reservations#index</h1>
-<p>Find me in app/views/reservations/index.html.erb</p>
+<% @reserves.each do |reserve|%>
+  <%= reserve.id %>
+  <%= reserve.start_date %>
+  <br>
+<% end %>
