--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,26 +1,1 @@
-<div class="user">
-  <%= render "shared/user-nav-pc" %>
-  
-  <%= form_with model: @user, url: users_profile_path  do |f|%>
-    <table>
-     <tr>
-       <th><%= f.label :name ,"名前" %></th>
-       <td><%= f.text_field :name %></td>
-     </tr>
-     <tr>
-       <th><%= f.label :icon ,"アイコン" %></th>
-       <td><%= f.file_field :icon %></td>
-     </tr>
-     <tr>
-       <th><%= f.label :profile ,"プロフィール" %></th>
-       <td><%= f.text_area :profile %></td>
-     </tr>
-   </table>
-   <div>
-     <ul>
-       <li><%= f.submit "編集を完了する" %></li>
-     </ul>
-   </div>
-  <% end %>
-  
-</div>
+<%= render "shared/users/config/config"%>
