--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -94,7 +94,7 @@ div.field, div.action {
   }
 }
 
-.required::before {
+.required::before ,.required-a::after{
   content: "必須";
   color: #fff;
   background-color: #ff0000a8;
@@ -170,9 +170,6 @@ div.field, div.action {
   height: 65px;
   object-fit: cover;
   border-radius: 50px;
-  
-  margin: 0 1rem;
-  padding: 0.25rem;
 }
 
 .fa-map-marker-alt::before {
@@ -201,6 +198,33 @@ div.field, div.action {
         }
       }
     }
+  }
+  
+  .user-view {
+    background-color: #F6F8F9;
+    border-left: 2px solid #e2e2e2;
+  }
+  
+  .user-view-box {
+    max-width: 880px;
+    background-color: #fff;
+    border: 1px solid #eaedef;
+    margin: 30px auto;
+  }
+  
+  .update-content {
+    border-bottom: 1px solid #eaedef;
+    padding: 20px;
+    margin: 0 15px;
+    font-size: 16px;
+    
+    label {
+      font-weight: bold;
+    }
+  }
+  
+  .icon-box {
+    text-align: center;
   }
 }
 
