--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -1,6 +1,3 @@
-.d-none {
-    display: none!important;
-}
 @media (min-width: 576px){
   .d-sm-inline-block {
       display: inline-block!important;
@@ -10,6 +7,12 @@
 @media (min-width: 992px){
   .d-lg-inline-block {
       display: inline-block!important;
+  }
+}
+
+@media (min-width: 992px) {
+  .d-lg-block {
+      display: block!important;
   }
 }
 
