develop user/edit

--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -56,6 +56,11 @@ div.field, div.action {
       background-color: #6c757d;
       border-color: #6c757d;
     }
+    
+    &-outline-secondary {
+      color: #6c757d;
+      border-color: #6c757d;
+    }
 }
 
 .container {
