--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -337,6 +337,70 @@ div.field, div.action {
   }
 }
 
+.room-posts, .reservations {
+  max-width: 100vw;
+  padding: 30px 60px;
+  
+  table {
+    min-width: 800px;
+    
+    thead {
+      tr {
+        border-top: 1px solid #eaedef;
+        border-bottom: 1px solid #eaedef;
+      }
+      
+      th {
+        padding: 8px 15px;
+        font-size: 14px;
+        letter-spacing: 1px;
+      }
+    }
+    
+    tbody {
+      a {
+        color: #4a90e2;
+        text-decoration: underline;
+      }
+      
+      tr {
+        border-bottom: 1px solid #eaedef;
+        
+        &:nth-child(even) {
+          background-color: #f9fafb;
+        }
+      }
+      
+      td {
+        padding: 10px;
+      }
+      
+      .posts-name {
+        font-size: 18px;
+        font-weight: bold;
+        color: #909090;
+      }
+      
+      .posts-content {
+        max-width: 400px;
+      }
+    }
+  }
+}
+
+.room-posts-image, .reservations-image {
+    width: 240px;
+    height: 140px;
+    object-fit: cover;
+}
+
+.price-icon {
+  &::before {
+    content: "￥";
+    padding-right: 3px;
+  }
+}
+
 .footer {
     position: absolute;
     bottom: 0;
