--- a/app/views/rooms/posts.html.erb
+++ b/app/views/rooms/posts.html.erb
@@ -1,11 +1,21 @@
-<% @rooms.each do |room|%>
-  <br/>
-  <%= room.id %>
-  <%= link_to room.name, room %>
-  <%= room.explanation %>
-  <%= room.fee %>
-  <%= room.address %>
-  <img src=  <%= room.room_image %> alt="aaaa">
-  <%= room.user_id %>
-  <%= link_to "編集", [:edit, room]%>
-<% end %>
+<% params = {
+    room_image: "ルーム画像",
+    name: "ルーム名",
+    explanation: "ルーム紹介",
+    fee: "料金",
+    created_at: "作成日",
+} %>
+
+<div class="room-posts">
+  <h4 class="pb-4">登録済みルーム一覧</h4>
+  <table>
+    <thead>
+      <%= render "shared/list/rooms-list/thead", params: params, isEdit: true%>
+    </thead>
+    <tbody>
+      <% @rooms.each do |room|%>
+        <%= render "shared/list/rooms-list/tbody", params: params, model: room, isEdit: true%>
+      <% end %>
+    </tbody>
+  </table>
+</div>
