--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -337,6 +337,61 @@ div.field, div.action {
   }
 }
 
+.room-show, .reservations-new {
+  padding: 30px 0;
+  
+  &-image {
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  &-detail {
+    display: flex;
+    align-items: center;
+    
+    &-icon {
+      padding: 10px;
+    }
+    
+    &-content {
+      font-size: 16px;
+      line-height: 30px;
+      padding: 30px 10px;
+      border-top: 1px solid #eaedef;
+      border-bottom: 1px solid #eaedef;
+      word-break: break-all;
+    }
+  }
+  
+  &-profile {
+    padding: 15px;
+    
+    &-name {
+      font-size: 18px;
+      font-weight: bold;
+      padding: 15px 0;
+    }
+    
+    &-address {
+      font-size: 14px;
+    }
+  }
+  
+  &-nav {
+    padding: 20px;
+    border: 1px solid #eaedef;
+  }
+  
+  &-date-select {
+    padding: 15px 0;
+    
+    label {
+      letter-spacing: 2px;
+      font-size: 14px;
+    }      
+  }    
+}
+
 .room-posts, .reservations {
   max-width: 100vw;
   padding: 30px 60px;
