--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,22 +1,23 @@
 <% params = {
-  
-  
-    room_image: "ルーム画像",
-    name: "ルーム名",
-    explanation: "ルーム紹介",
-    fee: "料金",
-    created_at: "作成日",
+  room_name: "ルーム名",
+  start_date: "開始日", 
+  end_date: "終了日",
+  fee: "料金",
+  room_id: "roomID",
+  post_user_id: "ホストID",
+  reserve_user_id: "利用者ID",
+  created_at: "作成日",
 } %>
 
 <div class="room-posts">
-  <h4 class="pb-4">登録済みルーム一覧</h4>
+  <h4 class="pb-4">予約済みルーム一覧</h4>
   <table>
     <thead>
-      <%= render "shared/list/rooms-list/thead", params: params, isEdit: true%>
+      <%= render "shared/list/rooms-list/thead", params: params, isEdit: false%>
     </thead>
     <tbody>
-      <% @rooms.each do |room|%>
-        <%= render "shared/list/rooms-list/tbody", params: params, model: room, isEdit: true%>
+      <% @reserves.each do |reserve|%>
+        <%= render "shared/list/rooms-list/tbody", params: params, model: reserve, isEdit: false%>
       <% end %>
     </tbody>
   </table>
