develop search/id

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,2 +1,9 @@
-<%= @reserve.id %>
-<%= @reserve.start_date %>
+<div class="user">
+  <div class="row">
+    <div class="col-lg-12 user-view">
+      <div class="user-view-box">
+        <%= render "shared/reserve/show/form" %>
+      </div>
+    </div>
+  </div>
+</div>
