--- a/app/views/shared/update-content/_show.html.erb
+++ b/app/views/shared/update-content/_show.html.erb
@@ -3,6 +3,6 @@
   <% if column == "password"%>
     *********
   <% else %>
-    <%= @user[column] %>
+    <%= model[column] %>
   <% end %>
 </div>
