--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -3,11 +3,8 @@
     <%= render "shared/rooms/config/rooms-side-bar" %>
     <div class="col-lg-10 room-view">
       <div class="room-view-box">
-        <%= render "shared/rooms/config/config-new" %>
+        <%= render "shared/rooms/config/config", :message "登録" %>
       </div>
     </div>
   </div>
 </div>
-
-
-
