--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,16 +1,6 @@
-<div>
-  <%= @area %>
-  <%= @keyword %>
+<div class="room">
+  <h4 class="pb-4">検索結果 : <%= @rooms.length%> 件</h4>
+  <div class="row">
+    <%= render "shared/rooms/search/link" %>
+  </div>
 </div>
-
-
-<% @rooms.each do |room| %>
-  <%= room.id %>
-  <%= link_to room.name, room %>
-  <%= room.explanation %>
-  <%= room.fee %>
-  <%= room.address %>
-  <img src=  <%= room.room_image %> alt="">
-  <br>
-<% end %>
-
