--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12 room-view">
       <div class="room-view-box">
-        <%= render "shared/rooms/config/config", message: "編集" %>
+        <%= render "shared/rooms/config/config", mode: "edit" %>
       </div>
     </div>
   </div>
