develop reservations/confilm

--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -440,7 +440,13 @@ div.field, div.action {
       letter-spacing: 2px;
       font-size: 14px;
     }      
-  }    
+  }
+  
+  &-check-content {
+    border-bottom: 1px solid #eaedef;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
 }
 
 .room-posts, .reservations {
