--- a/app/views/reservations/confilm.html.erb
+++ b/app/views/reservations/confilm.html.erb
@@ -1,20 +1,8 @@
-<%= @reserve.start_date %>
-<%= @reserve.end_date %>
-<%= @reserve.fee %>
-
-
 <div class="container reservations-new">
   <div class="row">
     <div class="col-6 offset-3">
-      <div class="reservations-new-nav">
-        <h4 class="reservations-new-check-content">予約内容確認</h4>
-        <h5 class="price-icon"><%= @reserve.fee %> / 日</h5>
-      </div>
+      <%= render "shared/reserve/new/form"%>
     </div>
   </div>
 </div>
 
-<%= form_with model: @reserve, url: reservations_url do|f| %>
-  <%= f.date_field :start_date%>
-  <%= f.submit%>
-<% end %>
