--- a/app/views/shared/list/rooms-list/_content.html.erb
+++ b/app/views/shared/list/rooms-list/_content.html.erb
@@ -1,7 +1,15 @@
 <% case param %>
   <% when :room_image then %>
+    <% if model == "reserve" %>
+      <% 
+        reration_param = "room." + param
+        link = "/uploads/room/room_image/#{model.id}/#{model[reration_param]}"
+      %>
+    <% else %>
+      <% link = "/uploads/room/room_image/#{model.id}/#{model[param]}"%>
+    <% end %>
     <td>
-      <%= link_to image_tag("/uploads/room/room_image/#{model.id}/#{model[param]}", class: "room-posts-image"), model %>
+      <%= link_to image_tag(link, class: "room-posts-image"), model %>
     </td>
     
   <% when :name then %>
