--- a/app/views/shared/list/rooms-list/_tbody.html.erb
+++ b/app/views/shared/list/rooms-list/_tbody.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <% params.each do |param|%>
-    <%= render "shared/list/rooms-list/content", model: model, param: param[0]%>
+    <%= render "shared/list/rooms-list/content", model: model, param: param[0], relation: relation%>
   <% end %>
   
   <% if isEdit %>
