--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,1 +1,1 @@
-<%= render "shared/users/form", page: "sign_up", message: "新しいアカウントを作成"%>
+<%= render "shared/users/form/form-base", page: "sign_up", message: "新しいアカウントを作成"%>
