header-nav-menu open/close

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,3 +12,10 @@
     <% end %>
   </div>
 </header>
+
+<script>
+  function test() {
+    var element =  document.getElementsByClassName("header-nav-menu")[0]
+    var display = element.classList.toggle("d-none")
+  }
+</script>
