--- a/app/views/shared/header/_login-menu.html.erb
+++ b/app/views/shared/header/_login-menu.html.erb
@@ -1,6 +1,6 @@
 <div class="nav-item d-sm-inline-block d-none"><%= current_user.name%></div>
 <div class="nav-item">
-  <img class="mx-3 p-1 host-icon nav-trigger" alt="メニュー" src=<%= current_user.icon %>>  
+  <img class="mx-3 p-1 host-icon nav-trigger" alt="メニュー" src=<%= current_user.icon %> onclick="test()" >  
   
   <%= render "shared/header/header-nav-menu" %>                     
 </div>
