--- a/app/views/shared/header/_header-nav-menu.html.erb
+++ b/app/views/shared/header/_header-nav-menu.html.erb
@@ -1,4 +1,4 @@
-<ul class="header-nav-menu">
+<ul class="header-nav-menu d-none">
   <li><%= link_to "ルーム登録", new_room_path %></li>
   <li><%= link_to "予約済みルーム一覧", reservations_path %></li>
   <li><%= link_to "登録済みルーム一覧", rooms_posts_path%></li>
