side-bar responsive

--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -199,6 +199,22 @@ div.field, div.action {
         }
       }
     }
+    
+    &-mobile {
+      height: auto;
+      
+      li {
+        float: left;
+      }
+      
+      .active {
+        border-bottom: 3px solid #4a90e2;
+        
+        a {
+          color: #4a90e2;
+        }
+      }
+    }
   }
   
   .user-view {
