--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -16,6 +16,13 @@
   }
 }
 
+@media (min-width: 992px) {
+  .d-lg-none {
+      display: none!important;
+  }
+}
+
+
 // container
 
 @media (min-width: 576px){
