--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,24 @@
+<%
+  list = [
+    { 
+      "area" => "東京",
+      "fileName" => "img_tokyo.jpeg"
+    },
+    { 
+      "area" => "大阪",
+      "fileName" => "img_osaka.jpeg"
+    },
+    { 
+      "area" => "京都",
+      "fileName" => "img_kyoto.jpeg"
+    },
+    { 
+      "area" => "札幌",
+      "fileName" => "img_sapporo.jpeg"
+    },
+  ]
+%>
+
 <div class="top-main">
   <div class="container">
     <div class="row col-lg-6">
@@ -14,10 +35,9 @@
   <div class="panel-area">
     <h2 class="section-title">おすすめのエリア</h2>
     <div class="row">
-      <%= render "shared/top/panel-item", area: "東京", fileName: "img_tokyo.jpeg" %>
-      <%= render "shared/top/panel-item", area: "大阪", fileName: "img_osaka.jpeg" %>
-      <%= render "shared/top/panel-item", area: "京都", fileName: "img_kyoto.jpeg" %>
-      <%= render "shared/top/panel-item", area: "札幌", fileName: "img_sapporo.jpeg" %>
+      <% list.each do |li|%>
+        <%= render "shared/top/panel-item", area: li["area"], fileName: li["fileName"] %>
+      <% end %>
     </div>
   </div>
 </div>
