fix reservation/show at show room.name

--- a/app/views/shared/reserve/show/_form.html.erb
+++ b/app/views/shared/reserve/show/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/update-content/update-content", type: "show",  title: "予約した部屋", column: "name", model: @reserve %>
+<%= render "shared/update-content/update-content", type: "show",  title: "予約した部屋", column: "name", model: @reserve.room %>
 
 <%= render "shared/update-content/update-content", type: "show",  title: "開始日", column: "start_date", model: @reserve %>
 
