fix validate to user

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
 </header>
 
 <script>
-  function test() {
+  function showNav() {
     var element =  document.getElementsByClassName("header-nav-menu")[0]
     var display = element.classList.toggle("d-none")
   }
