validation room/new

--- a/app/assets/stylesheets/common.scss.erb
+++ b/app/assets/stylesheets/common.scss.erb
@@ -541,3 +541,12 @@ div.field, div.action {
     color: #fff;
     text-align: center;
 }
+
+.show-error {
+  padding: 20px 0;
+  background-color: #FADBDA;
+  
+  li {
+    color: #FA0800;
+  }
+}
