--- a/app/views/shared/reserve/new/_form-control.html.erb
+++ b/app/views/shared/reserve/new/_form-control.html.erb
@@ -1,2 +1,2 @@
 <%= f.label title%>
-<%= f.text_field params, class: "form-control mb-4"%>
+<%= f.text_field params, class: "form-control mb-4", readonly: true%>
